fix: invert PWA icon in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -178,3 +178,9 @@ section {
     }
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  img[src$="pwa.svg"] {
+    filter: invert(1) hue-rotate(166deg);
+  }
+}
